--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+}
+
+.card {
+  margin-top: 1rem;
+  background-color: white;
+  padding: 10px 15px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
 }
